--- a/src/output.css
+++ b/src/output.css
@@ -582,8 +582,24 @@ video {
   margin: auto;
 }
 
+.-ml-1 {
+  margin-left: -0.25rem;
+}
+
 .-ml-3 {
   margin-left: -0.75rem;
+}
+
+.-ml-5 {
+  margin-left: -1.25rem;
+}
+
+.-mr-2 {
+  margin-right: -0.5rem;
+}
+
+.-mr-3 {
+  margin-right: -0.75rem;
 }
 
 .mb-1 {
@@ -656,22 +672,6 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.-ml-1 {
-  margin-left: -0.25rem;
-}
-
-.-ml-5 {
-  margin-left: -1.25rem;
-}
-
-.-mr-2 {
-  margin-right: -0.5rem;
-}
-
-.-mr-3 {
-  margin-right: -0.75rem;
 }
 
 .block {
@@ -808,10 +808,6 @@ video {
 
 .w-10\/12 {
   width: 83.333333%;
-}
-
-.w-11\/12 {
-  width: 91.666667%;
 }
 
 .max-w-lg {
@@ -996,6 +992,11 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .pb-5 {
   padding-bottom: 1.25rem;
 }
@@ -1100,49 +1101,6 @@ video {
 @media (min-width: 425px) {
   .custom\:ml-5 {
     margin-left: 1.25rem;
-  }
-
-  .custom\:-ml-1\.5 {
-    margin-left: -0.375rem;
-  }
-
-  .custom\:-ml-1 {
-    margin-left: -0.25rem;
-  }
-
-  .custom\:-ml-5 {
-    margin-left: -1.25rem;
-  }
-
-  .custom\:-mr-2 {
-    margin-right: -0.5rem;
-  }
-
-  .custom\:-mr-3 {
-    margin-right: -0.75rem;
-  }
-
-  .custom\:w-8\/12 {
-    width: 66.666667%;
-  }
-
-  .custom\:w-9\/12 {
-    width: 75%;
-  }
-
-  .custom\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .custom\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
-
-  .custom\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 }
 
